Fixed css and HTML to align, deleted class from JS, and fixed the IDEA js file while adding methods

--- a/styles.css
+++ b/styles.css
@@ -66,14 +66,7 @@ html, body , .container {
   background-color: #A9AAD2;
   display: flex;
   flex-direction: column;
-}
-
-#title{
-
-}
-
-#body{
-
+  overflow: hidden;
 }
 
 .title{
@@ -81,6 +74,7 @@ html, body , .container {
   height: 40px;
   border: 2px solid #5356A4;
   border-radius: 1px;
+  margin-bottom: 20px;
 }
 
 .bodyForm{
@@ -88,6 +82,7 @@ html, body , .container {
   height: 80px;
   border: 2px solid #5356A4;
   border-radius: 1px;
+  margin-bottom: 20px;
 }
 
 .saveButton{
@@ -98,6 +93,7 @@ html, body , .container {
   width: 100%;
   font-size: 16px;
   border-radius: 1px;
+  margin-bottom: 20px;
 }
 
 /*-------------Search--------------*/
@@ -210,7 +206,7 @@ p{
 
 
 
-/* .container * {
+ /*.container * {
   border: 1px solid red;
   position: relative;
   } */
